--- a/app/src/main/res/layout/app_bar_principal.xml
+++ b/app/src/main/res/layout/app_bar_principal.xml
@@ -7,9 +7,11 @@
     tools:context=".Principal">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
+
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
